# xyzpy

./: .gitattributes  .gitignore  .lgtm.yml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: pypi-release.yml  tests.yml
ci/azure/: install.yml  unit-tests.yml
ci/requirements/: py-base.yml  py36.yml  py37.yml  py38.yml  py39.yml  requirements-py37.yml
docs/: Makefile  api.rst  changelog.rst  conf.py  ex_basic.rst  ex_complex.rst  ex_crop.rst  ex_farming.rst  ex_pool.rst  gen_parallel.ipynb  gen_parallel.rst  generate.ipynb  generate.rst  index.md  index.rst  index_examples.md  index_examples.rst  index_guides.rst  installation.md  make.bat  manipulate.rst  plot.rst  plotting-new.ipynb  plotting.ipynb  utilities.ipynb
docs/_static/: my-styles.css
docs/examples/: basic output example.ipynb  complex output example.ipynb  crop example.ipynb  dask distributed example.ipynb  farming example.ipynb  visualize linear algebra.ipynb  visualize matrix.ipynb
test_ximu/: test_misc.py
tests/: test_manage.py  test_plot.py  test_signal.py  test_utils.py
tests/test_gen/: __init__.py  test_batch.py  test_case_runner.py  test_combo_runner.py  test_cropping.py  test_farming.py  test_prepare.py
ximio/plot/: matplotlib_plotter.py
ximu/: misc.py
ximu/plot/: __init__.py  matplotlib_plotter.py
xyzpy/: __init__.py  _version.py  generate.py  manage.py  misc.py  parallel.py  parallel_work.py  signal.py  telegram_notifier.py  utils.py
xyzpy/plot/: __init__.py  color.py  core.py  infiniplot.py  marker.py  matplotlib_plotter.py  plotly_plotter.py  plotter_bokeh.py  plotter_matplotlib.py  plotter_plotly.py  plotting_help.py  xyz_cmaps.py
xyzpy/tests/: test_generate.py  test_manage.py  test_misc.py  test_plot.py  test_runner.py  test_utils.py
xyzpy/tests/test_gen/: test_case_runner.py  test_combo_runner.py  test_farming.py  test_prepare.py
