[project]
name = "xyzpy"
description = "Easily generate large parameter space data"
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = ["version"]
authors = [{ name = "Johnnie Gray", email = "johnniemcgray@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = [
    "generate",
    "parallel",
    "plot",
    "tensor",
    "xarray",
]
dependencies = [
    "dask",
    "h5netcdf",
    "h5py",
    "joblib",
    "numpy",
    "pandas",
    "tqdm",
    "xarray",
]

[project.optional-dependencies]
tests = [
    "coverage",
    "pytest-cov",
    "pytest",
]
plotting = [
    "bokeh",
    "matplotlib",
]
docs = [
    "bokeh",
    "furo",
    "ipython",
    "matplotlib",
    "myst-nb",
    "setuptools_scm",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx-design"
]
[project.urls]
"Documentation" = "https://xyzpy.readthedocs.io/"
"Repository" = "https://github.com/jcmgray/xyzpy/"
"Issues" = "https://github.com/jcmgray/xyzpy/issues"
"Changelog" = "https://xyzpy.readthedocs.io/en/latest/changelog.html"

[project.scripts]
xyzpy-grow = "xyzpy.gen.xyzpy_grow_cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "xyzpy/_version.py"

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "once"

[tool.coverage.run]
source = ["xyzpy"]

[tool.ruff]
line-length = 79
target-version = "py310"
lint.ignore = ["E741"]


# ---------------------------------- pixi ----------------------------------- #

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10"
dask = "*"
h5netcdf = "*"
h5py = "*"
joblib = "*"
numpy = "*"
pandas = "*"
tqdm = "*"
xarray = "*"

[tool.pixi.pypi-dependencies]
xyzpy = { path = ".", editable = true }

[tool.pixi.feature.testing.dependencies]
bokeh = "*"
coverage = "*"
hdf4 = "*"
ipython = "*"
matplotlib = "*"
netcdf4 = "*"
pytest = "*"
pytest-cov = "*"
zarr = "*"
zict = "*"

[tool.pixi.feature.pyold.dependencies]
python = "3.10.*"
[tool.pixi.feature.pymid.dependencies]
python = "3.12.*"
[tool.pixi.feature.pynew.dependencies]
python = "3.14.*"

[tool.pixi.feature.docs.dependencies]
astroid = "*"
furo = "*"
ipython = "*"
myst-nb = "*"
ruff = "*"
setuptools_scm = "*"
sphinx = "*"
sphinx-autoapi = "*"
sphinx-copybutton = "*"
sphinx-design = "*"
[tool.pixi.feature.docs.pypi-dependencies]
squeaky = "*"

[tool.pixi.environments]
testpyold = { features = ["pyold", "testing"] }
testpymid = { features = ["pymid", "testing"] }
testpynew = { features = ["pynew", "testing"] }
docs = { features = ["pynew", "docs"] }

[tool.pixi.tasks.test]
cmd = """
pytest \
    tests/ \
    --cov=xyzpy \
    --cov-report=xml \
    --verbose \
    --durations=10
"""
cwd = "."
default-environment = "testpymid"
description = "Run the test suite."

[tool.pixi.feature.docs.tasks.docs]
cmd = "sphinx-build -b html docs docs/_build/html"
cwd = "."
description = "Build the HTML documentation."

[tool.pixi.feature.docs.tasks.readthedocs]
cmd = "sphinx-build -T -b html docs $READTHEDOCS_OUTPUT/html"
cwd = "."
description = "Specific task for building docs on ReadTheDocs."

[tool.pixi.feature.docs.tasks.docs-clean]
cmd = "rm -rf docs/_build"
cwd = "."
description = "Remove documentation build artifacts."

[tool.pixi.feature.docs.tasks.docs-serve]
cmd = "python -m http.server -d docs/_build/html 8000"
cwd = "."
description = "Serve the documentation locally."

[tool.pixi.feature.docs.tasks.lint]
cmd = """
    ruff check --select I
    && ruff format --check
"""
cwd = "."
description = "Check code formatting and imports with ruff."

[tool.pixi.feature.docs.tasks.format]
cmd = """
    ruff check --select I --fix
    && ruff format
"""
cwd = "."
description = "Apply code formatting and fix imports with ruff."

[tool.pixi.feature.docs.tasks.format-all]
cmd = """
    ruff check --select I --fix
    && ruff format
    && find . -name "*.ipynb" -print0 | xargs -0 squeaky
"""
cwd = "."
description = "Format all files including notebooks with squeaky."
