[tool:pytest]
testpaths = tests
addopts = --cov=xyzpy --cov-report term-missing --verbose

[coverage:run]
omit=xyzpy/_version.py

[versioneer]
VCS = git
style = pep440
versionfile_source = xyzpy/_version.py
versionfile_build = xyzpy/_version.py
tag_prefix = ''
parentdir_prefix = .

[metadata]
license_file = LICENSE
